# N_i_Kit_OS

./: .gitignore  Bot.py  Cargo.toml  README.md  website_checker.py
databases/: main_database.sqlite
src/: checker.rs  database.rs  main.rs  website.rs  website_checker.rs
tests/: website_checker_unittest.py
