[package]
name = "n_i_kit_os"
version = "0.1.0"
edition = "2021"

[dependencies]
checkssl = "0.2.0"
dptree = "0.3.0"
http = "0.2.9"
reqwest = "0.11.22"
sqlite3 = "0.24.0"
teloxide = { version = "0.12.2", features = ["macros", "ctrlc_handler"] }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
