[package]
name = "n_i_kit_os"
version = "0.1.0"
edition = "2021"

[dependencies]
checkssl = "0.2.0"
dptree = "0.3.0"
http = "0.2.9"
is-url = "1.0.4"
lazy_static = "1.4.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
sqlite3 = "0.24.0"
teloxide = { version = "0.12.2", features = ["macros", "ctrlc_handler"] }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
